# CSV-To-DynamoDB

./: .gitignore  Cargo.toml  LICENSE.MD  README.MD
examples/: aws region list.txt  complex.csv  simple.csv
src/: dynamo.rs  main.rs  utility.rs
src/modules/: config.rs  dynamo.rs  mod.rs  parser.rs  utility.rs
