[package]
name = "dynamo_qs"
version = "0.1.0"
authors = ["Devin Zhao <devin.work.au@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "0.2", features = ["macros"] }
rusoto_core = "0.43"
rusoto_dynamodb = "0.43"
