[package]
name = "csv_to_dynamo"
version = "0.1.0"
authors = ["Devin Zhao <devin.work.au@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
chrono = "0.4"
csv = "1.1"
rusoto_core = "0.43"
rusoto_dynamodb = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
